# InsightFlow

./: .env.example  .gitignore  AGENT.md  README.md  backfill_notion.py  pyproject.toml  requirements.txt
.github/workflows/: codeguardian.yml  daily-digest.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: insightflow-tracker.md
.sisyphus/notepads/insightflow-tracker/: config.md
.sisyphus/plans/: insightflow-tracker.md
data/: models.db  seen_ids.json
data/2026/02/: 11.json  12.json  15.json
src/: ai_handler.py  config.py  main.py  model_tracker.py  notifier.py  notion_common.py  notion_handler.py  notion_model_handler.py  scraper.py  storage.py
tests/: __init__.py  conftest.py  test_ai_handler.py  test_main.py  test_notifier.py  test_notion_common.py  test_scraper.py  test_smoke.py
