[project]
name = "insightflow"
version = "0.1.0"
description = "AI tech news tracker - collects, summarizes, and delivers daily digests via Telegram"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.0",
    "aiohttp>=3.9.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
insightflow = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
